[package]
name = "ascii-in-the-park"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
image = "0.24.6"
imageproc = { version = "0.23.0" }
rusttype = "0.9.3"
